# python_mkdocs_ex

./: 404.html  hello.py  index.html  mkdocs.yml  pyproject.toml
about/: index.html
docs/: about.md  functions.md  index.md
functions/: index.html
site/: 404.html  index.html  objects.inv
site/about/: index.html
site/functions/: index.html
