[project]
name = "python-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.12.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "streamlit>=1.40.2",
]
